Cacti CHANGELOG

1.2.27
-security#GHSA-37x7-mfjv-mm7m: Authentication Bypass when using using older password hashes
-security#GHSA-7cmj-g5qc-pj88: RCE vulnerability when importing packages
-security#GHSA-cx8g-hvq8-p2rv: RCE vulnerability when plugins include files
-security#GHSA-gj3f-p326-gh8r: SQL Injection vulnerability when using tree rules through Automation API
-security#GHSA-grj5-8fcj-34gh: XSS vulnerability when using JavaScript based messaging API
-security#GHSA-jrxg-8wh8-943x: SQL Injection vulnerability when using form templates
-security#GHSA-p4ch-7hjw-6m87: XSS vulnerability when reading tree rules with Automation API
-security#GHSA-rqc8-78cm-85j3: XSS vulnerability when managing data queries
-security#GHSA-vjph-r677-6pcc: SQL Injection vulnerability when retrieving graphs using Automation API
-issue#5622: Improve PHP 8.3 support
-issue#5628: When importing packages via command line, data source profile could not be selected
-issue#5629: When changing password, returning to previous page does not always work
-issue#5636: When using LDAP authentication the first time, warnings may appear in logs
-issue#5638: When editing/viewing devices, add IPv6 info to hostname tooltip
-issue#5645: Improve speed of polling when Boost is enabled
-issue#5648: Improve support for Half-Hour time zones
-issue#5649: Improve support of ping on Windows
-issue#5655: When user session not found, device lists can be incorrectly returned
-issue#5660: On import, legacy templates may generate warnings
-issue#5661: Improve support for alternate locations of Ping
-issue#5662: Improve PHP 8.1 support for Installer
-issue#5669: Fix issues with number formatting
-issue#5677: Improve PHP 8.1 support when SpikeKill is run first time
-issue#5693: Improve PHP 8.1 support for SpikeKill
-issue#5696: When using Chinese to search for graphics, garbled characters appear.
-issue#5701: When importing templates, preview mode will not always load