@@ -98,9 +98,9 @@ if ($auth_method != 0) {
 			if (cacti_sizeof($current_user)) {
 				$_SESSION['sess_user_id'] = $current_user['id'];;
 
-				cacti_log("LOGIN: User '" . $current_user['username'] . "' authenticated via Basic Authentication.", false, 'AUTH');
-
 				$client_addr = get_client_addr();
+
+				cacti_log("LOGIN: User '" . $current_user['username'] . "' authenticated via Basic Authentication from IP Address '" . $client_addr . "'", false, 'AUTH');
 
 				db_execute_prepared('INSERT IGNORE INTO user_log
 					(username, user_id, result, ip, time)
